--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.8",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "express": "^4.17.1"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "@types/express": "^4.17.8",
     "shx": "^0.3.2"
   }
 }
